[server] Tomcat environment variables